--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="flex flex-col items-center">
             <!-- Logo -->
             <div class="w-32 h-32 mb-6 rounded-full overflow-hidden shadow-lg bg-white logo-container">
-                <img src="prosaude.jpg" alt="ProSaúde Logo" class="w-full h-full">
+                <img src="./prosaude.jpg" alt="ProSaúde Logo" class="w-full h-full">
             </div>
             
             <!-- Nome da Empresa -->
@@ -63,5 +63,5 @@
             </div>
         </div>
     </div>
-</body
+</body>
 </html> 
