--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="flex flex-col items-center">
             <!-- Logo -->
             <div class="w-32 h-32 mb-6 rounded-full overflow-hidden shadow-lg bg-white logo-container">
-                <img src="http://www.prosaudeirati.com.br/prosaude.jpg" alt="ProSaúde Logo" class="w-full h-full">
+                <img src="prosaude.jpg" alt="ProSaúde Logo" class="w-full h-full">
             </div>
             
             <!-- Nome da Empresa -->
