Adiciona páginas de Política de Privacidade e Termos e Condições com links no rodapé

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             <!-- Footer -->
             <div class="mt-8 text-center text-sm text-gray-500">
                 <p>© 2025 ProSaúde. Todos os direitos reservados.</p>
+                <div class="mt-2 flex flex-col gap-1 items-center">
+                    <a href="privacidade.html" class="text-blue-600 hover:underline">Política de Privacidade</a>
+                    <a href="termos.html" class="text-blue-600 hover:underline">Termos e Condições</a>
+                </div>
             </div>
         </div>
     </div>
